--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="dotquest"
+APP_NAME="php-monitoring"
 APP_ENV=local
 APP_KEY=base64:Fbr2atbgJnj081TqTd23g7JkDsCCR8GvHVon/3WZTGw=
 APP_DEBUG=true
